[tool.poetry]
name = "mlimpl"
version = "0.1.0"
description = "Includes models implemented from scratch and their comparison with standard public implementations"
authors = ["Ravi Kant Thakur <ravi.122133@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
numpy = "^1.26.4"
pandas = "^2.2.2"
scikit-learn = "^1.5.0"
tensorflow = "^2.16.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.0"
jupyter = "^1.0.0"
scipy = "^1.13.1"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
black = "^24.4.2"
flake8 = "^7.0.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
